--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "-- install the library\r npm install mongodb --save",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
+  },
+  "engines": {
+    "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
